# ttp_sros_parser

./: .bandit.yml  .coveragerc  .dockerignore  .flake8  .gitignore  .pydocstyle.ini  .pylintrc  .yamllint  Dockerfile  README.md  codecov.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: python-app.yml
Examples/: get_bof.py
docs/: changelog.md  methods.md
examples/: get_bof.py  getter_example.py
tests/: conftest.py  example-config.txt  readme.txt  test_ttp_sros_parser.py  tests_sros_show_router_interface.py  tests_sros_system_configuration.py  unit_tests_ttp_sros.py
tests/configs/: example-config.txt  example-json.json
tests/fixtures/Jinja2/: sros_7750_python_configuration.j2  sros_7750_python_declaration_configuration.j2  sros_aaa_declaration_config.j2  sros_dhcp_config.j2  sros_igmp_config_srv.j2  sros_mirror_config.j2  sros_pim_config_net.j2  sros_redundancy_config.j2
tests/fixtures/configs/: example-config-7750-r2.txt  example-config-7750-r3.txt  example-config-7750.txt  example-config-sar.txt  example-json.json
tests/fixtures/data/: example.yml
tests/fixtures/parsed_results/: ethcfm.json  system_maf.json
tests/fixtures/parsed_results/admin_display/: aaa_configuration.json  aaa_declarations_configuration.json  cflowd.json  connectors.json  dhcp_configuration.json  ethcfm.json  filter_configuration.json  filter_log_configuration.json  filter_match_list_configuration.json  igmp_configuration.json  interfaces.json  isis_configuration.json  l2tp_configuration.json  lag.json  lag_1.json  ldp_configuration.json  log.json  mgmt_router_config.json  mirror_configuration.json  mpls_lsps.json  multicast_path_management_policy_configuration.json  pim_configuration.json  ports.json  static_routes.json  (+19 more)
tests/fixtures/show_output/: file_dir.txt  show_ravs_bof.txt  show_route_table.txt  show_router_interface.txt  show_router_route_table.txt  show_router_static_route.txt  show_router_static_route_tag.txt  show_router_static_route_tag_v6.txt  show_router_vrf_route_table.txt  show_router_vrf_route_table_v6.txt  show_router_vrf_static_route_tag.txt
tests/others/: tests_sros_router_interfaces.py  tests_sros_show_router_interface.py  tests_sros_system_configuration.py
tests/show_output/: show_bof.txt  show_ravs_bof.txt  show_ravs_bof2.txt  show_router_route_table.txt  show_service_service_using.txt
tests/templates/general/: main.j2  sros_filter_log_configuration.j2  sros_mgmt_router_config.j2  sros_multicast_path_management_policy_config.j2  sros_system_security_config.j2
tests/unit/: test_7750_only.py  test_helpers.py  test_rendered_config.py  test_srosparser_methods.py  test_ttp_sros_parser.py  test_ttp_sros_show_outputs.py  tests_sros_router_interfaces.py  tests_sros_show_router_interface.py  tests_sros_system_configuration.py
ttp_sros_parser/: .gitignore  __init__.py  helpers.py  srosparser.py  test.py
ttp_sros_parser/templates/: __init__.py
ttp_sros_parser/templates/admin_display_file/: sros_7750_lag.j2  sros_7750_lag.ttp  sros_7750_mpls_lsp.ttp  sros_7750_python_configuration.ttp  sros_7750_python_declaration_configuration.ttp  sros_aaa_config.j2  sros_aaa_config.ttp  sros_aaa_declaration_config.ttp  sros_cflowd_config.j2  sros_cflowd_config.ttp  sros_connector_configuration.ttp  sros_dhcp_config.ttp  sros_filter_configuration.j2  sros_filter_configuration.ttp  sros_filter_log_configuration.ttp  sros_filter_match_list_configuration.j2  sros_filter_match_list_configuration.ttp  sros_full_config_latest.ttp  sros_igmp_config.ttp  sros_igmp_config_net.j2  sros_isis_configuration.ttp  sros_l2tp_config.j2  sros_l2tp_config.ttp  sros_ldp_config.j2  sros_ldp_config.ttp  sros_log_configuration.j2  sros_log_configuration.ttp  sros_mgmt_router_config.ttp  sros_mirror_config.ttp  sros_multicast_path_management_policy_config.j2  sros_multicast_path_management_policy_config.ttp  sros_pim_config.ttp  sros_pim_config_srv.j2  sros_port_config.j2  sros_port_config.ttp  sros_port_cross-connect_config.j2  sros_port_cross-connect_config.ttp  sros_qos_policy_config.ttp  sros_qos_policy_config1.j2  sros_qos_policy_config1.ttp  (+31 more)
ttp_sros_parser/templates/custom/: sros_custom_hostname_asn.ttp
ttp_sros_parser/templates/full_config/: sros_full_config.ttp
ttp_sros_parser/templates/helpers/: sros_system_asn.ttp  sros_system_hostname.ttp  sros_system_interface.ttp
ttp_sros_parser/templates/show_commands/: show_router_router_table_general.ttp  sros_file_dir.ttp  sros_show_bof_cli.ttp  sros_show_ravs_bof_cli.ttp  sros_show_router_bgp_neighbor_advertised_routes.ttp  sros_show_router_dhcp_summary.ttp  sros_show_router_interface.ttp  sros_show_router_isis_database_detail_context_all_SYS_ID.ttp  sros_show_router_route_table.ttp  sros_show_router_static_route_ipv4.ttp  sros_show_router_static_route_ipv6.ttp  sros_show_service_service_using.ttp  sros_show_srrp.ttp
(+7 files in other folders)
